--- a/apps/engaged/index.html
+++ b/apps/engaged/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Engagements - Interactive Multiplayer Games</title>
+    <title>Engaged - Interactive Multiplayer Games</title>
     <meta name="description" content="Interactive multiplayer games with real-time WebSocket connectivity" />
     <meta name="keywords" content="multiplayer games, interactive games, websocket, social gaming, real-time" />
   </head>
