--- a/apps/finclamp/index.html
+++ b/apps/finclamp/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" sizes="512x512" href="/android-chrome-512x512.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#667eea" />
+    <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- SEO Meta Tags -->
     <meta
