Added build changes

--- a/apps/finclamp/index.html
+++ b/apps/finclamp/index.html
@@ -349,65 +349,7 @@
     </style>
   </head>
   <body>
-    <!-- Beautiful PWA Loader -->
-    <div id="pwa-loader" class="pwa-loader">
-      <div class="loader-container">
-        <!-- Animated FinClamp Logo -->
-        <div class="logo-animation">
-          <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" class="animated-logo">
-            <defs>
-              <linearGradient id="topGradientLoader" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color:#4ADE80;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#06B6D4;stop-opacity:1" />
-              </linearGradient>
-              <linearGradient id="bottomGradientLoader" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color:#0EA5E9;stop-opacity:1" />
-                <stop offset="100%" style="stop-color:#3B82F6;stop-opacity:1" />
-              </linearGradient>
-            </defs>
-            <!-- Top arc -->
-            <path d="M 16 40 A 24 24 0 0 1 64 40"
-                  fill="none"
-                  stroke="url(#topGradientLoader)"
-                  stroke-width="6"
-                  stroke-linecap="round"
-                  class="top-arc"/>
-            <!-- Bottom arc -->
-            <path d="M 64 40 A 24 24 0 0 1 16 40"
-                  fill="none"
-                  stroke="url(#bottomGradientLoader)"
-                  stroke-width="6"
-                  stroke-linecap="round"
-                  class="bottom-arc"/>
-            <!-- Center pulse -->
-            <circle cx="40" cy="40" r="4" fill="#8B5CF6" class="center-pulse"/>
-          </svg>
-        </div>
-
-        <!-- Brand Text -->
-        <div class="brand-text">
-          <h1 class="brand-name">FinClamp</h1>
-          <p class="brand-tagline">Smart Financial Planning</p>
-        </div>
-
-        <!-- Progress Bar -->
-        <div class="progress-container">
-          <div class="progress-bar">
-            <div class="progress-fill"></div>
-          </div>
-          <div class="progress-text">Loading your financial tools...</div>
-        </div>
-
-        <!-- Floating Elements -->
-        <div class="floating-elements">
-          <div class="float-element" style="--delay: 0s;">💰</div>
-          <div class="float-element" style="--delay: 0.5s;">📊</div>
-          <div class="float-element" style="--delay: 1s;">🏦</div>
-          <div class="float-element" style="--delay: 1.5s;">📈</div>
-          <div class="float-element" style="--delay: 2s;">🧮</div>
-        </div>
-      </div>
-    </div>
+    <!-- React PWA Loader will handle all loading -->
 
     <div id="root"></div>
 
@@ -431,98 +373,6 @@
 
     <script type="module" src="/src/index.jsx"></script>
 
-    <!-- PWA Loader Control Script -->
-    <script>
-      // Beautiful PWA Loader Control
-      document.addEventListener('DOMContentLoaded', function() {
-        const loader = document.getElementById('pwa-loader');
-        const progressFill = document.querySelector('.progress-fill');
-        const progressText = document.querySelector('.progress-text');
-
-        // Loading messages
-        const loadingMessages = [
-          'Loading your financial tools...',
-          'Preparing calculators...',
-          'Setting up your workspace...',
-          'Almost ready...',
-          'Welcome to FinClamp!'
-        ];
-
-        let messageIndex = 0;
-        let progress = 0;
-
-        // Update progress and messages
-        const updateProgress = () => {
-          progress += Math.random() * 15 + 5; // Random increment between 5-20
-
-          if (progress > 100) progress = 100;
-
-          // Update progress bar
-          if (progressFill) {
-            progressFill.style.width = progress + '%';
-          }
-
-          // Update message
-          if (progressText && messageIndex < loadingMessages.length) {
-            progressText.textContent = loadingMessages[messageIndex];
-            messageIndex++;
-          }
-
-          // Continue until complete
-          if (progress < 100) {
-            setTimeout(updateProgress, 300 + Math.random() * 500);
-          } else {
-            // Hide loader when complete
-            setTimeout(hideLoader, 800);
-          }
-        };
-
-        // Hide loader function
-        const hideLoader = () => {
-          if (loader) {
-            loader.classList.add('hidden');
-            // Remove from DOM after transition
-            setTimeout(() => {
-              if (loader.parentNode) {
-                loader.parentNode.removeChild(loader);
-              }
-            }, 500);
-          }
-        };
-
-        // Start the loading sequence
-        setTimeout(updateProgress, 200);
-
-        // Hide HTML loader quickly to let React loader take over
-        setTimeout(hideLoader, 1500);
-
-        // Hide loader when React app is ready
-        window.addEventListener('load', () => {
-          setTimeout(hideLoader, 500);
-        });
-
-        // PWA specific: Hide loader when app is installed
-        window.addEventListener('appinstalled', () => {
-          setTimeout(hideLoader, 300);
-        });
-
-        // Service Worker ready
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.ready.then(() => {
-            setTimeout(hideLoader, 800);
-          });
-        }
-      });
-
-      // Prevent loader from showing on subsequent visits (optional)
-      if (sessionStorage.getItem('finclamp-loaded')) {
-        const loader = document.getElementById('pwa-loader');
-        if (loader) {
-          loader.style.display = 'none';
-        }
-      } else {
-        sessionStorage.setItem('finclamp-loaded', 'true');
-      }
-    </script>
+    <!-- React PWA Loader handles all loading states -->
   </body>
 </html>
