--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       // Redirect to index.html with the path as a parameter
 
       var l = window.location;
-      var basePath = '/';
+      var basePath = '/OrgRJ/';
       var redirectUrl = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
                        basePath + '?p=' + encodeURIComponent(l.pathname + l.search + l.hash);
 
