Fix GitHub Pages base URL - remove /OrgRJ/ prefix
- Update build:github script to use --base=/ instead of --base=/OrgRJ/
- All assets now use correct root paths (/assets/ instead of /OrgRJ/assets/)
- 404.html already updated to use / base path
- Local testing confirms all assets load correctly
- Ready for GitHub Pages deployment from root domain

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       // Redirect to index.html with the path as a parameter
 
       var l = window.location;
-      var basePath = '/OrgRJ/';
+      var basePath = '/';
       var redirectUrl = l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
                        basePath + '?p=' + encodeURIComponent(l.pathname + l.search + l.hash);
 
